@@ -1,3 +1,3 @@
-1.2.2-stable
-cvs tag: hpucode-1_2-stable
+1.2.3-release
+cvs tag: hpucode-1_2_3-release
 required: fidoconfig 0.14-stable, smapi 2.2-stable
